# claude-chat

./: .gitignore  pyproject.toml
src/claude_chat/: client.py  config.py  main.py  models.py
src/claude_chat/api/: app.py  routes.py
